fix scrollbar issue on windows

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 #header {
   height: 30px;
   width: calc(100vw - 20px);
